<resources>
    <string name="app_name">Quiz App</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="e_g_john">e.g. John</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="start">Start</string>
    <string name="your_score_is_o_out_of_3">20</string>
    <string name="finish">FINISH</string>
    <string name="task_new_quiz">Task new Quiz</string>
    <string name="_20">/ 3</string>
    <string name="your_score">YOUR SCORE</string>
    <string name="username">username</string>
    <string name="congratulations">Congratulations!</string>
    <string name="quiz_result">Quiz Result</string>
    <string name="submit">SUBMIT</string>
    <string name="quit_quiz">QUIT QUIZ</string>

    <string name="question_indicator_text"><b><big>Question 0%d</big></b>/%d</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quit_game">Quit Quiz?</string>
    <string name="quit_confirmation">Are you sure you want to quit this game?</string>

    <string name="result"><font color="#FF03DAC5">%d</font> / 3</string>
    <string name="my_result">%d</string>
    <string name="take_new_quiz">Take New Quiz</string>
    <string name="share_results">Share Results</string>
    <string name="cancel_button">Cancel Button</string>

    <string name="game_won_message">Congratulations</string>
    <string name="game_over_message">Try Again!</string>
    <string name="share_score_message">Hey! I scored %d points in this game. Come check it out!!!</string>
    <string name="share_score_title">Share your score</string>
    <string name="general_knowledge_quiz">General Knowledge Quiz</string>

</resources>